--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
+@font-face{
+    font-family: 'bad';
+    src: url(fonts/Streamster.ttf);
+}
+
+body{
+    margin: 0;
+}
 #logo_navigation{
+
     display: flex;
 
 }
 header{
+    position: absolute;
     display: block;
     width: 100%;
     height: 400px;
@@ -10,12 +20,22 @@ header{
 #logo{
     width: 30%;
     height: 150px;
-    background-color: royalblue;
+    /* background-color: royalblue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: 'bad';
+    font-size: 72px;
+    color: black;
 }
 nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     width: 70%;
     height: 150px;
-    background-color: aqua;
+    /* background-color: aqua;  */
 }
 ul {
     display: flex;
@@ -23,9 +43,171 @@ ul {
     list-style-type: none;
 
 }
-ul li {
+a{
+    text-decoration: none;
+    color: aliceblue;
+}
+p{
     padding: 50px;
-    background-color: chartreuse;
+}
+ul li {
+    padding: 20px 70px;
+    /* background-color:rgba(0, 0, 0, 0.5); */
+    font-family: Helvetica;
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
+    font-size: 17px;
+    border-bottom: 1px solid aliceblue;
+
+}
+ul li:hover{
+    background-color: aliceblue;
+    border-bottom: 1px solid gray;
+}
+ul li:hover a{
+    color: black;
+}
+#cover{
+    max-width: 100%;
+    height: 1080px;
+    background-color: brown;
+    background-image: url(images/mj_black_white_withmicro_sneezes.jpg);
+}
+#cover_overlay{
+    top: 250px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.6;
+    position: absolute;
+    max-width: 100%;
+    height: 500px;
 
 
+
+    background: rgba(255,255,255,0);
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(54%, rgba(0,0,0,1)), color-stop(100%, rgba(255,255,255,0)));
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
+    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
+
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+ 
+
+}
+h1{
+    margin: 0;
+}
+
+#cover_overlay p{
+    font-size: 100px;
+    color: aliceblue;
+    font-family: 'bad';
+    margin-left: 200px;
+}
+#about {
+    max-width: 100%;
+    height: 1080px;
+    background-color: deepskyblue;
+    background-image: url(images/mj_graphics.jpg);
+    background-attachment: fixed;
+}
+#about h1{
+    width: 70%;
+    margin: auto;
+    position: relative;
+    color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 140px;
+    text-align: center;
+    top: 150px;
+
+}
+#about p{
+    width: 60%;
+    margin: auto;
+    position: relative;
+    color: aliceblue;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    top: 150px;
+    display: flex;
+    align-content: flex-start;
+}
+
+#best_album{
+    max-width: 100%;
+    height: 1080px;
+    background-color: rgb(0, 255, 115);
+    background-image: url(images/mj_dancing.jpg);
+    display: flex;
+
+    align-items: center;
+}
+#best_album_content{
+    width: 80%;
+    margin: auto;
+    color: aliceblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 72px;
+
+}
+.album_cover img{
+    padding: 30px 50px;
+    width: 370px;
+    height: 370px;
+}
+
+#img_album_covers{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+}
+.album_cover{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size:30px;
+}
+.album_cover img:hover{
+    padding: 0px 0px;
+    
+    width: 400px;
+    height: 400px;
+
+    -webkit-box-shadow: 0px 2px 19px 14px rgba(255,255,255,0.67);
+    -moz-box-shadow: 0px 2px 19px 14px rgba(255,255,255,0.67);
+    box-shadow: 0px 2px 19px 14px rgba(255,255,255,0.67);   
+}
+footer{
+    max-width: 100%;
+    height: 200px;
+    background-color: black;
+    background-image: url(images/walk.jpg);
+    background-size: 870px;
+    background-attachment: fixed;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.icon{
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+#icons{
+    margin-left: 100px;
+} 
+#directed{
+  color: aliceblue;
 }
