--- a/style.css
+++ b/style.css
@@ -1,391 +1,9 @@
-@font-face{
-    font-family: 'bad';
-    src: url(fonts/Streamster.ttf);
-}
-@keyframes li_hover{
-    0%{
-        background-color: rgba(0, 0, 0, 0.0);
-    
-        border-bottom:aliceblue;
-    }
-
-    50%{
-      
-        background-color: aliceblue;
-        border-bottom:black;
-    }
-    100%{
-        background-color: rgba(0, 0, 0,0);
-        border-bottom:aliceblue;
-    }
-}
-@keyframes li_a_hover{
-    0%{
-        color: aliceblue;
-    }
-    50%{
-        color: black;
-    }
-    100%{
-        color: aliceblue;
-    }
-}
-@keyframes mike_becoming_white{
-    0%{
-        color: black;
-    }
-    50%{
-        color: aliceblue;
-    }
-    100%{
-        color: black;
-    }
-}
-@keyframes show{
-    0%{
-        opacity: 0;
-        transform: translateY(-15%);
-    }
-
-    100%{
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes show_the_king{
-    0%{
-        
-        opacity: 0;
-    }
-    100%{
-     
-        opacity: 1;
-    }
-}
-@keyframes show_cover_overlay{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity:0.7;
-        -webkit-box-shadow: -1px -1px 56px 21px rgba(255,255,255,0.94);
-        -moz-box-shadow: -1px -1px 56px 21px rgba(255,255,255,0.94);
-        box-shadow: -1px -1px 56px 21px rgba(255,255,255,0.94);
-    }
-    100%{
-        opacity: 0;
-    }
-}
-body{
-    margin: 0;
-}
-#logo_navigation{
-
-    display: flex;
-
-}
-header{
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 400px;
-    animation: show 2s ease-in ;
-
-}
-#logo{
-    width: 17%;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'bad';
-    font-size: 36px;
-    color: black;
-    
-}
-#logo:hover {
-    animation: mike_becoming_white 2s;
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 70%;
-    height: 150px;
-}
-ul {
-    display: flex;
-    flex-direction: row;
-    list-style-type: none;
-}
-a{
-    text-decoration: none;
-    color: aliceblue;
-}
-p{
-    padding: 50px;
-}
-ul li {
-    padding: 20px 70px;
-    font-family: Helvetica;
-    border-bottom: 1px solid rgba(0, 0, 0, 0);
-    font-size: 17px;
-    border-bottom: 1px solid aliceblue;
-
-}
-ul li:hover{
-    animation: li_hover 1.5s ease-in-out;
-}
-ul li:hover a{
-    animation: li_a_hover 1.5s ease-in-out;
-}
-.cover{
-    max-width: 100%;
-    height: 1080px;
-    background-color: brown;
-    background-image: url(images/mj_black_white_withmicro_sneezes.jpg);
-}
-#cover_overlay{
-    top: 250px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0.6;
-    position: absolute;
-    max-width: 100%;
-    height: 500px;
-
-
-
-    background: rgba(255,255,255,0);
-    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(54%, rgba(0,0,0,1)), color-stop(100%, rgba(255,255,255,0)));
-    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
-    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
-    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
-    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(0,0,0,1) 54%, rgba(255,255,255,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
-
-
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-
-}
-#cover_overlay p{
-
-    animation: show_the_king 1.5s ease-in;
-}
-h1{
-    margin: 0;
-}
-
-#cover_overlay p{
-    font-size: 100px;
-    color: aliceblue;
-    font-family: 'bad';
-    margin-left: 200px;
-}
-#about {
-    max-width: 100%;
-    height: 1080px;
-    background-color: deepskyblue;
-    background-image: url(images/mj_graphics.jpg);
-    background-attachment: fixed;
-}
-#about h1{
-    width: 70%;
-    margin: auto;
-    position: relative;
-    color: aliceblue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 140px;
-    text-align: center;
-    top: 150px;
-
-}
-#about p{
-    width: 60%;
-    margin: auto;
-    position: relative;
-    color: aliceblue;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 30px;
-    top: 150px;
-    display: flex;
-    align-content: flex-start;
-}
-
-#best_album{
-    max-width: 100%;
-    height: 1080px;
-    background-image: url(images/mj_dancing.jpg);
-    display: flex;
-    align-items: center;
-}
-#best_album_content{
-    width: 80%;
-    margin: auto;
-    color: aliceblue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 72px;
-}
-#img_album_covers{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    top:1000px;
-    padding-top: 50px;
-}
-.album_cover{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-.album_cover_overlay{
-        width:400px;
-        height:400px;
-        background:black;
-        opacity:0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 50px;
-        font-family: Arial, Helvetica, sans-serif;
-}
-.album_cover_overlay:hover{
-    animation: show_cover_overlay 2s ease-in;
-}
-#bad_cover{
-    width:400px;
-    height:400px;
-    background-size: 100%;
-    background-image: url("images/bad_album_cover.jpg");
-}
-#dangerous_cover{
-    width:400px;
-    height:400px;
-    background-size: 100%;
-    background-image: url("images/dangerous_album_cover.png");
-}
-#thriller_cover{
-    width:400px;
-    height:400px;
-    background-size: 100%;
-    background-image: url("images/thriller_cover.jpg");
-}
-footer{
-    max-width: 100%;
-    height: 200px;
+.about-content{
     background-color: black;
-    background-image: url(images/walk.jpg);
-    background-size: 870px;
-    background-attachment: fixed;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
-.icon{
-    width: 50px;
-    height: 50px;
-    padding: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
+.about-content h2{
+    font-size: 2.3em;
 }
-#icons{
-    margin-left: 100px;
-} 
-#directed{
-  color: aliceblue;
-  font-family: Arial, Helvetica, sans-serif;
+img{
+    object-fit: cover;
 }
-
-#news_main{
-    max-width: 100%;
-    height: 1080px;
-    background-image: url(images/mj_black_white_withmicro_sneezes.jpg);
-
-}
-.news_blocks{
-    max-width: 100%;
-    height: 1000px;
-    position: relative;
-    top: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    animation: show 2s ease-in ;
-}
-.news_block {
-    width: 400px;
-    height: 450px;
-    background-color:rgba(0, 0, 0, 0.6);
-    margin-right: 50px;
-    margin-left: 50px;
-}
-.news_photo{
-    width: 300px;
-    height: 224px;
-
-}
-
-.news_photo img{
-    
-    width: 400px;
- 
-    background-size: 100%;
-}
-.news_title{
-    width: 100%;
-    height:  50px;
-    color: aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bolder;
-    border-bottom: 1px gray solid;
-    font-size: 1.4em;
-}
-.news_text{
-    width: 100%;
-    height: 182px;
-
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.news_text span{
-    color: aliceblue;
-    padding: 10px 20px;
-    font-size: 1em;
-}
-
-.dropdown_fans {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .dropdown:hover .dropdown_fans {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .dropdown_fans  a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    animation: none;
-  }
